Images displayed correctly on small screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -526,6 +526,15 @@ table {
 
 }
 
+@media only screen and (min-width: 600px) {
+ 
+  .lightbox-target:target img {
+    height: auto;
+    width: 60vw;
+   
+  }
+ }
+
 @media screen and (min-width: 1022px) {
   .navbar {
     display: flex;
